<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        layout="@layout/toolbar_sign"
        android:id="@+id/toolbar_login"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_page_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_page_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <TextView
        android:id="@+id/textView_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/log_in"
        android:textColor="@color/login_register_form_details"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_page_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_page_left"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/login_register_form_details"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@id/guideline_login_page_right"
        app:layout_constraintStart_toStartOf="@id/guideline_login_page_left"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_title">

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_email_address"
            android:drawablePadding="8dp"
            android:textColor="@color/login_register_form_details" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Asset 教學 : https://developer.android.com/studio/write/image-asset-studio?hl=zh-cn -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/login_register_form_details"
        android:hint="@string/password"
        android:textColorHint="@color/login_register_form_details"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@id/guideline_login_page_right"
        app:layout_constraintStart_toStartOf="@id/guideline_login_page_left"
        app:layout_constraintTop_toBottomOf="@+id/login_username_layout">

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_lock_password"
            android:drawablePadding="8dp"
            android:textColor="@color/login_register_form_details" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox_login_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_your_password"
        android:textColor="@color/login_register_form_details_medium"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_page_left"
        app:layout_constraintTop_toBottomOf="@id/login_password_layout"  />

    <TextView
        android:id="@+id/textView_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/login_register_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox_login_remember_password"
        app:layout_constraintEnd_toStartOf="@id/guideline_login_page_right"
        app:layout_constraintTop_toBottomOf="@id/login_password_layout" />

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background"
        android:onClick="onClickToSingIn"
        android:text="@string/login"
        android:padding="12dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textColor="@color/login_register_form_button"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_page_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_page_left"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_forgot_password"/>

    <View
        android:id="@+id/view_or_left_line"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_register_form_details_medium"
        app:layout_constraintStart_toStartOf="@id/guideline_login_page_left"
        app:layout_constraintTop_toBottomOf="@+id/button_log_in"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_social_login"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@+id/textView_or"/>

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/login_register_form_details_medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_or_left_line"
        app:layout_constraintTop_toTopOf="@+id/view_or_left_line"
        app:layout_constraintEnd_toStartOf="@+id/view_or_right_line"
        app:layout_constraintStart_toEndOf="@+id/view_or_left_line" />

    <View
        android:id="@+id/view_or_right_line"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_register_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/textView_or"
        app:layout_constraintEnd_toEndOf="@id/guideline_login_page_right"
        app:layout_constraintStart_toEndOf="@+id/textView_or"
        app:layout_constraintTop_toTopOf="@+id/textView_or" />

    <LinearLayout
        android:id="@+id/linearLayout_social_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/view_footer_line"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_page_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_login_page_left">

        <Button
            android:id="@+id/button_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook"
            android:textColor="@color/login_register_button_text"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:padding="35px"
            android:layout_marginEnd="20px"
            android:layout_weight="1"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="3px"
            app:icon="@drawable/ic_sign_facebook"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

        <Button
            android:id="@+id/button_google_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:textColor="@color/login_register_button_text"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:padding="35px"
            android:layout_marginStart="20px"
            android:layout_weight="1"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="3px"
            app:icon="@drawable/ic_sign_google"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>
    </LinearLayout>

    <View
        android:id="@+id/view_footer_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_register_form_details_medium"
        app:layout_constraintTop_toTopOf="@+id/sign_up_linear_layout"/>

    <LinearLayout
        android:id="@+id/sign_up_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/login_register_form_details_medium" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>