<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toReleaseTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar_main"/>

    <Button
        android:id="@+id/button_main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onClickToLogin"
        android:text="@string/click_to_login"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"/>

    <Button
        android:id="@+id/button_main_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickToSignUp"
        android:text="@string/click_to_sign_up"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_login" />

    <Button
        android:id="@+id/button_main_release_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickToReleaseTask"
        android:text="@string/click_to_release_task"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_sign_up" />

    <Button
        android:id="@+id/button_main_show_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickToShowTask"
        android:text="@string/click_to_show_task"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_release_task" />

    <Button
        android:id="@+id/button_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickToMainPage"
        android:text="@string/click_to_main_page"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_show_task"/>

    <Button
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickToProfile"
        android:text="@string/click_to_profile_page"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_page"/>

    <Button
        android:id="@+id/button_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickToShowChatList"
        android:text="click_to_message_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quick_login_22" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/quick_login_14"
        android:layout_width="206dp"
        android:layout_height="42dp"
        android:text="Quick login 14"
        style="@style/TextColorStyle"
        android:onClick="onClickToLogin14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_profile" />

    <Button
        android:id="@+id/quick_login_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickToLogin21"
        android:text="quick_login_21"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quick_login_14" />

    <Button
        android:id="@+id/quick_login_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickToLogin22"
        android:text="quick_login_22"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quick_login_21" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickToSign"
        android:text="前往登入與註冊頁面"
        style="@style/TextColorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_message" />
</androidx.constraintlayout.widget.ConstraintLayout>