<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_sign"
        android:id="@+id/toolbar_sign_up"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_up_page_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_up_page_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <!-- both layout_width/layout_height are wrap_content -->
    <TextView
        android:id="@+id/TextView_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        android:textColor="@color/login_register_form_details"
        android:textSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sign_up_page_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_sign_up_page_left"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@id/guideline_sign_up_page_right"
        app:layout_constraintStart_toStartOf="@id/guideline_sign_up_page_left"
        app:layout_constraintTop_toBottomOf="@+id/TextView_sign_up">

        <EditText
            android:id="@+id/editText_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_email_address"
            android:drawablePadding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_nick_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/nickname"
        android:textColorHint="@color/login_register_form_details"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@id/guideline_sign_up_page_right"
        app:layout_constraintStart_toStartOf="@id/guideline_sign_up_page_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_layout">

        <EditText
            android:id="@+id/editText_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_user_nickname"
            android:drawablePadding="8dp"
            android:textColor="@color/login_register_form_details" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/login_register_form_details"
        android:textColorHint="@color/login_register_form_details"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@id/guideline_sign_up_page_right"
        app:layout_constraintStart_toStartOf="@id/guideline_sign_up_page_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_nick_name_layout">

        <EditText
            android:id="@+id/editText_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_lock_password"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:textColor="@color/login_register_form_details" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_again_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/login_register_form_details"
        android:textColorHint="@color/login_register_form_details"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@id/guideline_sign_up_page_right"
        app:layout_constraintStart_toStartOf="@id/guideline_sign_up_page_left"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_layout">

        <EditText
            android:id="@+id/editText_sign_up_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_lock_password"
            android:drawablePadding="8dp"
            android:hint="@string/password_again"
            android:textColor="@color/login_register_form_details" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textColor="@color/login_register_form_button"
        android:background="@drawable/login_button_background"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sign_up_page_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_sign_up_page_left"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_again_layout" />

    <View
        android:id="@+id/view_or_left_line"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_register_form_details_medium"
        app:layout_constraintStart_toStartOf="@id/guideline_sign_up_page_left"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_social_register"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@+id/textView_or"/>

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/login_register_form_details_medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_or_left_line"
        app:layout_constraintTop_toTopOf="@+id/view_or_left_line"
        app:layout_constraintEnd_toStartOf="@+id/view_or_right_line"
        app:layout_constraintStart_toEndOf="@+id/view_or_left_line" />

    <View
        android:id="@+id/view_or_right_line"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_register_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/textView_or"
        app:layout_constraintEnd_toEndOf="@id/guideline_sign_up_page_right"
        app:layout_constraintStart_toEndOf="@+id/textView_or"
        app:layout_constraintTop_toTopOf="@+id/textView_or" />

    <LinearLayout
        android:id="@+id/linearLayout_social_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/view_register_footer_line"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sign_up_page_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_sign_up_page_left">

        <Button
            android:id="@+id/button_facebook_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook"
            android:textColor="@color/login_register_button_text"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:padding="35px"
            android:layout_marginEnd="20px"
            android:layout_weight="1"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="3px"
            app:icon="@drawable/ic_sign_facebook"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

        <Button
            android:id="@+id/button_google_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:textColor="@color/login_register_button_text"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:padding="35px"
            android:layout_marginStart="20px"
            android:layout_weight="1"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="3px"
            app:icon="@drawable/ic_sign_google"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>
    </LinearLayout>

    <View
        android:id="@+id/view_register_footer_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_register_form_details_medium"
        app:layout_constraintTop_toTopOf="@+id/login_linear_layout"/>

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/log_in"
            android:gravity="center"
            android:textColor="@color/login_register_form_details_medium"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>